lib/komainu/tests/snapshots/flow_dispatch__refrersh_token_success.snap
---
source: lib/komainu/tests/flow_dispatch.rs
expression: "SerdeResponse::from(response)"
---
{
  "body": "{\"access_token\":\"kltugigbzriuurdb\",\"token_type\":\"Bearer\",\"refresh_token\":\"zisudtbgojtcgfsh\",\"expires_in\":1337}",
  "headers": {},
  "status": 200
}
