lib/komainu/tests/snapshots/flow_dispatch__unknown_grant_type.snap
---
source: lib/komainu/tests/flow_dispatch.rs
expression: "SerdeResponse::from(response)"
---
{
  "body": "{\"error\":\"unsupported_grant_type\"}",
  "headers": {},
  "status": 400
}
